# ducky

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
data/: test_data.csv  test_data.json
src/: main.rs
src/actions/: logger.rs  mod.rs
src/app/: mod.rs  state.rs
src/db/: connection.rs  mod.rs  query.rs  schema.rs
src/import/: mod.rs
src/ui/: file_browser.rs  mod.rs
src/workflows/: mod.rs
